# CNES

./: CMakeLists.txt
src/: main.c
src/core/: cpu.c  cpu.h  instructions.c  instructions.h  mmu.c  mmu.h  nes.c  nes.h
